--- a/docs/zh-cn/使用方法/初始化程序.md
+++ b/docs/zh-cn/使用方法/初始化程序.md
@@ -1,5 +1,5 @@
 # 1.下载Mirai机器人
-- 前往[OneDrive](https://1drv.ms/u/s!Amxr3REUqLcYhVcKX1d5FVuoNaEw?e=1jY3Qs)下载配置好的Mirai机器人
+- 前往[OneDrive](https://1drv.ms/u/s!Amxr3REUqLcYhVcKX1d5FVuoNaEw?e=1jY3Qs)或[阿里云盘](https://www.aliyundrive.com/s/f4m2v1pJFcB)下载配置好的Mirai机器人
 - 运行Run.cmd
 
 # 2.从Github下载最新Release
